[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Themes/Theme1.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Menus/Versus_Screen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menus/GUI/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Backgrounds/background1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Mirage final.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Icons/0.jpg" type="Texture" id=6]

[sub_resource type="DynamicFont" id=2]
size = 41
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 23
font_data = ExtResource( 5 )

[node name="Versus_Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 3 )]
margin_right = 0.0
margin_bottom = 0.0
texture = ExtResource( 4 )

[node name="All" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Match_found" type="Label" parent="All"]
margin_right = 1280.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Match trouv√© !"
align = 1
valign = 1

[node name="Players" type="HBoxContainer" parent="All"]
margin_top = 102.0
margin_right = 1280.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="Self_Container" type="VBoxContainer" parent="All/Players"]
margin_top = 29.0
margin_right = 638.0
margin_bottom = 461.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 17

[node name="Icon_Texture" type="TextureRect" parent="All/Players/Self_Container"]
margin_left = 194.0
margin_right = 444.0
margin_bottom = 380.0
rect_min_size = Vector2( 250, 380 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 10.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Pseudo" type="Label" parent="All/Players/Self_Container"]
margin_top = 397.0
margin_right = 638.0
margin_bottom = 432.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "--Error--"
align = 1

[node name="Opponent_Container" type="VBoxContainer" parent="All/Players"]
margin_left = 642.0
margin_top = 29.0
margin_right = 1280.0
margin_bottom = 461.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 17

[node name="Icon_Texture" type="TextureRect" parent="All/Players/Opponent_Container"]
margin_left = 194.0
margin_right = 444.0
margin_bottom = 380.0
rect_min_size = Vector2( 250, 380 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 10.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Pseudo" type="Label" parent="All/Players/Opponent_Container"]
margin_top = 397.0
margin_right = 638.0
margin_bottom = 432.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "--Error--"
align = 1

[node name="Buttons" type="HBoxContainer" parent="All"]
margin_top = 597.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25

[node name="Accept_Button" type="Button" parent="All/Buttons"]
margin_left = 211.0
margin_top = 46.0
margin_right = 426.0
margin_bottom = 76.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
text = "Accepter le match  (5)"

[node name="Decline_Button" type="Button" parent="All/Buttons"]
margin_left = 877.0
margin_top = 46.0
margin_right = 1044.0
margin_bottom = 76.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
text = "Refuser le match"
[connection signal="pressed" from="All/Buttons/Accept_Button" to="." method="_on_Accept_Button_pressed"]
[connection signal="pressed" from="All/Buttons/Decline_Button" to="." method="_on_Decline_Button_pressed"]
